--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
@@ -9,7 +9,7 @@
 	text-decoration: none;
 }
 #blq-main #blq-content a:focus, #blq-main #dna-boardpromo a:focus {
-	background: #376dad;
+	background-color: #376dad;
 	color: #fff;
 }
 h3 span { 
@@ -52,7 +52,7 @@ ul li h4 {
 #blq-main #global-nav {
 	margin-bottom: 14px;
 	padding: 5px 10px;
-	background: #71aef1;
+	background-color: #71aef1;
 	text-align: center;
 }
 #blq-main #global-nav ul li {
@@ -69,7 +69,8 @@ ul li h4 {
 	background: none;
 }
 #blq-main #global-nav ul li a:hover, #blq-main #global-nav ul li.selected a, #blq-main #global-nav ul li a:focus {
-	background: #fff;
+	background-color: #fff;
+	background-image: none;
 	color: #366eab;
 }
 ul.navigation {
@@ -110,7 +111,7 @@ ul.navigation li a {
 #blq-local-nav ul.local-site-nav  {
 	margin-bottom: 0;
 	border: none;
-	background: #376dad;
+	background-color: #376dad;
 	font-size: 1.1em;
 }
 #blq-local-nav ul.local-site-nav li {
@@ -120,10 +121,10 @@ ul.navigation li a {
 	color: #fff; 
 }
 #blq-local-nav ul.local-site-nav a:hover, #blq-local-nav ul.local-site-nav a:focus {
-	background: #71aef1;
+	background-color: #71aef1;
 }
 #blq-main #blq-local-nav ul li.topic-parent a {
-	background: #71aef1;
+	background-color: #71aef1;
 	color: #fff;
 }
 #blq-local-nav ul.topics li {
@@ -136,22 +137,23 @@ body.ie6 #blq-local-nav ul.topics li {
 #blq-local-nav ul.topics li.topic-parent {
 	padding-left: 0;
 	line-height: 1.8em;
+	margin-bottom: 5px;
 }
 #blq-local-nav ul.topics li a:hover {
 	/*font-weight: bold;*/	
 }
 #blq-main #blq-local-nav ul.topics li a:focus {
-	background: #376dad;
+	background-color: #376dad;
 	color: #fff;
 }
 ul.admin {
-	background: #e2e2e2;	
+	background-color: #e2e2e2;	
 }
 #blq-main #blq-local-nav ul.admin li a {
   color: #666;
 }
 #blq-main #blq-local-nav ul.admin li a:focus {
-	background: #666;
+	background-color: #666;
 	color: #e2e2e2;
 }
 #blq-main ul.navigation li.hr {
@@ -172,7 +174,7 @@ ul.admin {
 	float: left;
 	margin: 0 0 14px 14px;
 }
-#blq-main .threads, #blq-main .addthread, #blq-main .error, #blq-main .multiposts, #blq-main .moreposts, #blq-main .morecomments  {
+#blq-main .threads, #blq-main .addthread, #blq-main .error, #blq-main .multiposts, #blq-main .moreposts, #blq-main .morecomments, #blq-main .move-thread  {
 	width: 463px;
 	margin-right: 14px;
 	padding-bottom: 10px;
@@ -189,7 +191,7 @@ ul.admin {
 #blq-main #blq-content h2, #blq-main #dna-boardpromo h3 {
 	padding:  8px 10px;
 	line-height: 1em;
-	background: #71aef1;
+	background-color: #71aef1;
 	font-size: 1.4em; 
 	font-weight: normal;
 	color: #fff;
@@ -202,7 +204,7 @@ ul.admin {
 	color: #fff;
 }
 #blq-main #blq-content h2 span a:focus {
-	background: #fff;
+	background-color: #fff;
 	color: #71aef1;
 }
 #blq-main ul.topfives {
@@ -264,7 +266,7 @@ body.ie6 #blq-main #blq-content .pagination li {
 	color: #fff;
 }
 #blq-main #blq-content .pagination li.current a {
-  	background:#71aef1;
+  	background-color:#71aef1;
 }
 #blq-main #blq-content .pagination li span {
 	margin-left: 3px;
@@ -283,7 +285,7 @@ body.ie6 #blq-main #blq-content .pagination li {
   	display:none;
 }
 #blq-main #blq-content .pagination li.selected { 
-  	background:#f359ff;
+  	background-color:#f359ff;
 }
 /* end pagination */
 /* topiclist, forumthreads, post-list */
@@ -307,7 +309,7 @@ body.ie6 #blq-main #blq-content .pagination li {
 }
 #blq-content .topiclist li h3 a {
 	margin-left:0; 
-	background: #fff;
+	background-color: #fff;
 	font-size: 	1.1em; 
 	color: #0066cc; 
 	text-decoration: none; 
@@ -323,7 +325,7 @@ body.ie6 #blq-main #blq-content .pagination li {
 	margin-right: 14px;
 	padding-bottom:10px;
 	border: 1px solid #CCCCCC;
-	background: #FFFFFF;
+	background-color: #FFFFFF;
 	min-height: 160px;
 }
 /*#blq-content .single-col-topics li {
@@ -368,7 +370,7 @@ ul.forumthreadposts li p {
 	padding: 10px 15px;
   	margin-left: 25px;
   	margin-right: 25px;
-  	background: #e8eced;
+  	background-color: #e8eced;
   	line-height: 1.3em;
 }
 #blq-main .addthread li.firstpost .itemdetail, #blq-main .addthread li .itemdetail {
@@ -378,7 +380,7 @@ ul.forumthreadposts li p {
 	padding: 0;	
 }
 ul.forumthreadposts li.stripe {
-	background:#edf0f1;
+	background-color:#edf0f1;
 }
 #blq-content .forumthreads {
 	margin-top: 10px;
@@ -405,6 +407,10 @@ p.forumthreads {
 	color:#ccc; 
 	background-color: transparent;
 	text-align:center;
+}
+#blq-content p.forumthreads {
+	padding: 10px;
+	font-size: 1em;	
 }
 ul.forumthreads li p { 
 	padding-top: 5px;
@@ -435,7 +441,7 @@ ul.forumthreads li, ul.post-list li {
 	padding-bottom: 10px;
 }
 ul.forumthreads li.stripe, ul.post-list li.stripe {
-  	background:#ebebed;
+  	background-color:#ebebed;
 }
 ul.forumthreads li span.userid {
 	display:none;
@@ -494,7 +500,7 @@ ul.forumthreadposts li blockquote, div.inreplyto blockquote {
 /*#blq-content .dna-boards-startanewdiscussion a, #blq-content .dna-boards-inreplyto a {
 	font-size:0.9em;
 	padding:4px 8px;
-	background: #4264A7;
+	background-color: #4264A7;
 	color: #FFFFFF;
 }*/
 
@@ -525,11 +531,17 @@ ul.forumthreadposts li blockquote, div.inreplyto blockquote {
 a.editor, a.notable { 
   	font-style: italic;
 }
-#blq-content .dna-boards p.dna-error {
+/*#blq-content .dna-boards p.dna-error {
   	padding-left:214px; 
   	width:375px; 
   	font-weight:bold; 
   	background:url(/dnaimages/dna_messageboard/img/complain.gif) no-repeat 188px 2px;
+}*/
+#blq-content .dna-boards p.dna-error {
+  	padding-left:15px; 
+  	margin-left: 10px;
+  	font-weight:bold; 
+  	background:url(/dnaimages/dna_messageboard/img/complain.gif) no-repeat center left;
 }
 #blq-content .dna-moderation-wrap {
 	background: url(/dnaimages/dna_messageboard/img/dna-mod-bottom-arrow.png) top right no-repeat;
@@ -547,7 +559,7 @@ a.editor, a.notable {
 	font-size: 0.9em;
 }
 #blq-content .dna-boards-moderation {
-  	padding: 10px 48px 32px 10px;
+  	padding: 10px 10px 32px 10px;
   	margin: 10px 48px 0 0;
   	background: url(/dnaimages/dna_messageboard/img/dna-mod.png) top left no-repeat;
   	font-size: 100%;
@@ -555,7 +567,7 @@ a.editor, a.notable {
 }
 #blq-content .forummodstatus {
 	padding: 10px;
-	background: #e2e2e2;
+	background-color: #e2e2e2;
 }
 .dna-invisible { display: none; }
 #blq-content .dna-boards-moderation .dna-invisible {display:none}
@@ -565,9 +577,12 @@ a.editor, a.notable {
   	/*font-size: 100%;*/
 }
 #blq-main #blq-content .dna-boards-moderation a:focus {
-	background: #666;
+	background-color: #666;
 	color: #e2e2e2;
 }
+#blq-main .move-thread p {
+	padding: 10px;	
+} 
 
 /* end main content */
 
@@ -584,7 +599,7 @@ div#dna-boardpromo div p  {
   	padding: 10px 9px;
 }
 div#dna-boardpromo #dna-about-board {
-	background: #f1f1f1;
+	background-color: #f1f1f1;
 	border: none;
 	padding-bottom: 10px;
 }
@@ -687,7 +702,7 @@ ul.breadcrumbs li.current {
 }
 .sidePanel a.current-section, .sidePanel a.current-section:hover {
   	color:#fff;
- 	background:#FF359F; 
+ 	background-color:#FF359F; 
  	border-bottom:1px solid #FF359F;
 }
 #blq-main p#membership {
@@ -761,7 +776,7 @@ p.flag a {
 	width:auto; 
 	overflow:visible;
 	padding: 2px 10px;
-	background: #376dad;
+	background-color: #376dad;
 	-moz-border-radius: 3px; 
 	-webkit-border-radius: 3px;
 	border: none;	
@@ -772,7 +787,7 @@ p.flag a {
 #blq-main #blq-content .dna-boards input.cancel {
 	margin-left: 8px;
 	margin-right: 158px;
-	background: #71aef1;
+	background-color: #71aef1;
 }
 .dna-boards p.preview {
   margin:10px 0 0 24px; 
@@ -850,7 +865,7 @@ div#logintrouble {
 /* bookmark links */
 #blqx-bookmark a {color:#fff;;text-decoration:underline;}
 #blqx-bookmark a:hover {color:#ccc; text-decoration:none;}
-#blqx-bookmark {margin-bottom:3px;color:#eee;position:relative;background:#9e9e9e;font-size:1.1em}
+#blqx-bookmark {margin-bottom:3px;color:#eee;position:relative;background-color:#9e9e9e;font-size:1.1em}
 #blqx-bookmark ul {float:left;margin-left:58px;position:relative;width:580px;z-index:2}
 #blqx-bookmark ul li {float:left;padding:7px 7px 7px 24px}
 #blqx-bookmark ul li a {padding:0 0 3px 25px;background-image:url(/dnaimages/dna_messageboard/img/socialicons.gif);background-repeat:no-repeat}
