--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/admin.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/admin.css
@@ -37,6 +37,7 @@ p, ul, h1, h2, h3, h4, h5 {line-height:130%}
 .dna-main h3,.dna-main h4,.glow110-overlay h4 {margin-bottom:10px; text-transform:uppercase}
 .dna-main h3 {padding:5px; color:#fff; background-color:#56a4ce}
 .dna-main h4 {border-bottom:1px solid #56a4ce; line-height:140%; margin:10px}
+.dna-main h4 span {color:#ccc; font-size:.8em}
 .dna-main h5  {margin:0 10px}
 .dna-main h5 + p {margin:0 10px 10px 10px}
 .dna-main h3 a {float:right; margin-top:-2px}
@@ -62,21 +63,25 @@ span.dna-fnote {display:block; margin-top:2px}
 .dna-error-box  {margin-top:10px}
 .dna-error-box h2 {margin:20px 0}
 .dna-error-box p {margin:30px}
-.dna-error  {padding:10px; margin:15px 10px; border:3px double red; font-weight:bold}
-.dna-no-error {padding:10px; margin:15px 10px; border:3px double green; font-weight:bold}
+.dna-error,.dna-no-error {width:50em; padding:10px; margin:15px 10px; font-weight:bold}
+.dna-error  {border:3px double red}
+.dna-no-error {border:3px double green}
 
 .dna-error-text {color:#cc3333; display:block}
 .dna-error-input {background:#feecec; border-color:#ba0c0c}
 
 
-.glow110-overlay {width:350px}
+.glow110-overlay {width:350px; overflow:hidden}
 
-.dna-error-box a.id-signin {display:inline-block; width: 75px; height: 22px; margin:0 5px; padding: 4px 5px 4px 45px; background:url(/dnaimages/dna_messageboard/img/id-signin-hover.gif) no-repeat top left; 	color:#fff; font-weight: bold; text-decoration:none; border:none}
+.dna-error-box a.id-signin {display:inline-block; width:75px; height:22px; margin:0 5px; padding:4px 5px 4px 45px; background:url(/dnaimages/dna_messageboard/img/id-signin-hover.gif) no-repeat top left; color:#fff; font-weight:bold; text-decoration:none; border:none}
+*+html .dna-error-box a.id-signin,*html .dna-error-box a.id-signin {position:relative; top:10px; }
 .dna-error-box a.id-signin:hover  {background:url(/dnaimages/dna_messageboard/img/id-signin.gif) no-repeat top left; color:#000; border:none}
 .dna-error-box a {font-weight:bold; color:#56a4ce; border:none}
 .dna-error-box a:hover {border-bottom:1px solid #56a4ce}
 .dna-error-box a:focus,.dna-error-box a:active {background:#56a4ce; color:#fff}
 
+
+#blq-nav-links {position:absolute; left:-9000px; top:0; z-index:20}
 
 /* default form */
 .dna-main form label {margin-bottom:3px; font-weight:bold; display:block}
@@ -90,11 +95,13 @@ span.dna-fnote {display:block; margin-top:2px}
 .dna-buttons input[type=submit]{width:auto}
 .dna-buttons a {display:block; padding:2px 7px!important; text-transform:uppercase; cursor:pointer; background:#91c2dc url(/dnaimages/dna_messageboard/img/bg-btn.gif) repeat-x 0 100%; font-weight:bold; color:#fff!important; border:1px solid #3988b2 !important; font-size:.95em}
 .dna-buttons a:hover,.dna-buttons a:focus,.dna-buttons a:active {background:#82bdde url(/dnaimages/dna_messageboard/img/bg-btn-h.gif) repeat-x 0 100%; border-bottom:1px solid #666}
-*+html .dna-buttons a {padding:3px 7px!important;}
+*+html .dna-buttons a {padding:3px 7px!important}
+*html .dna-buttons a {padding:3px 7px!important}
 
 .glow110-overlay a.dna-btn-link {text-decoration:none; font-size:1em; padding:3px 7px!important}
-*+html .glow110-overlay a.dna-btn-link {padding:4px 7px!important}}
-*+html .glow110-overlay .dna-buttons input {font-size:1.05em}
+*+html .glow110-overlay a.dna-btn-link {padding:4px 7px!important}
+*html .glow110-overlay a.dna-btn-link {padding:4px 7px!important}
+*+html .glow110-overlay .dna-buttons input,*html .glow110-overlay .dna-buttons input {font-size:1.05em}
 
 /* HEADER - banner*/
 #blq-local-nav {background:#97c8e3 url(/dnaimages/dna_messageboard/img/bg-header.gif) repeat-x 0 100%}
@@ -152,6 +159,7 @@ span.dna-fnote {display:block; margin-top:2px}
 .dna-mb-opentime tr.odd td,.dna-mb-opentime tr.odd th {background-color:#ebebd6}
 .dna-mb-opentime tr.off td,.dna-mb-opentime tr.off th {background-color:#dce3e8}
 .dna-mb-opentime input[type=checkbox] {margin-top:3px}
+.dna-mb-opentime h4 {margin:0; border:0;}
 
 .dna-radio-stime {width:10em; vertical-align:middle; margin:0!important; padding-left:5px}
 
@@ -207,16 +215,16 @@ span.dna-fnote {display:block; margin-top:2px}
 .dna-preview-box label {display:block; vertical-align:top; font-weight:bold}
 .dna-preview-box li {padding:3px 10px}
 .dna-preview-box .dna-buttons {margin:20px 10px 0 10px}
-.dna-topic-step {color:#ccc; font-size:.8em}
 .dna-preview-box .dna-buttons {border-top:1px solid #56a4ce; padding:10px 0}
 .dna-preview-box .dna-buttons li {padding:0}
 
 #dna-preview-editheader ul li label,#dna-preview-edittopiclayout ul li label,#dna-footer-color ul li label,.dna-turn-img-off label,#dna-preview-addtoolbar label,#dna-preview-addrecentdiscussions label,#dna-topic-archive label,#dna-topic-unarchive label,#dna-topic-delete label{display:inline-block!important; width:240px}
 
-.glow110-overlay input,.glow110-overlay textarea{width:325px}
-*+html .glow110-overlay textarea{width:320px}
+.glow110-overlay input,.glow110-overlay textarea {width:325px}
+*+html .glow110-overlay textarea {width:320px}
+*html .glow110-overlay textarea {width:320px}
 .glow110-overlay #dna-preview-editheader ul li input,.glow110-overlay #dna-preview-edittopiclayout ul li input,#dna-footer-color ul li input,.dna-turn-img-off input,#dna-preview-addtoolbar input,#dna-preview-addrecentdiscussions input,#dna-topic-archive input,#dna-topic-unarchive input,#dna-topic-delete input{width:auto}
-.glow110-overlay .dna-topic-step {font-size:.9em}
+.glow110-overlay .dna-main h4 span {font-size:.9em}
 
 .dna-turn-img-off {margin:30px 10px 10px 10px!important; padding:5px; background:#dce3e8; border:1px solid #ccc}
 
